Some minor efficiency improvements relating to parsing numbers